Fix table heights incorrect on initial render
Root Cause:
Unlike other Thoughts table thoughts are rendered within a fixed width container.
And to expand click area we have style max-width: calc(100% - 1em)
Due to this 1em the table cell rendered in 2 lines, and later the width is updated along with other cols.
But since the initial render was 2 lines it gets assigned with multiline classname which gives additional padding. <- shows extra space
After user selects item or any other render action the multiline class name gets removed causing the cell back to normal height

Solution:
assign max-width 100% instead of calc(100% - 1em) on table col specific cells

--- a/src/App.css
+++ b/src/App.css
@@ -558,6 +558,11 @@ a.text-link {
   white-space: pre-wrap;
 }
 
+.table-col .thought,
+.table-col .thought-annotation {
+  max-width: 100%;
+}
+
 .thought-annotation {
   position: absolute;
   pointer-events: none;
